fix: device virtual keyboard overlapping dialog

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 
-.root {
+:root {
+    --vv-offset-bottom: 0px;
+}
+
+#root {
     isolation: isolate;
 }
 
